// Copyright (c) 2014, Cloudera, inc.
// Confidential Cloudera Information: Covered by NDA.
package kudu;

import "google/protobuf/descriptor.proto";

// ============================================================================
//  Protobuf container metadata
// ============================================================================

// Supplemental protobuf container header, after the main header (see
// pb_util.h for details).
message ContainerSupHeaderPB {
  // The PB schema for the messages expected in this container. This
  // represents an entire .proto file; it's not just for a single message.
  required google.protobuf.FileDescriptorProto proto = 1;

  // The PB message type expected in each data entry in this container. Must
  // be fully qualified (i.e. kudu.tablet.TabletMasterBlockPB).
  required string pb_type = 2;
}
